--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p><a href="https://e3624b362d274c66bea02edf0583bfb5.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+    <p><a class="link--cta" href="https://e3624b362d274c66bea02edf0583bfb5.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
 </body>
 </html>
