--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a class="link--cta" href="https://e3624b362d274c66bea02edf0583bfb5.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay loop>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
