--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a class="link--cta" href="https://e3624b362d274c66bea02edf0583bfb5.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
-    <video autoplay loop>
+    <video autoplay loop id="video" controls preload="metadata">
         <source src="resources/videos/excursion.mp4" type="video/mp4">
+        <track label="English" kind="captions" srclang="en" src="resources/myvideo-en.vtt" default>
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
-    <p><img src="resources/images/camp.jpg"></p>
-    <p><img src="resources/images/phone.png"></p>
+    <p><img src="resources/images/camp.jpg" alt="Image shows a tents in a desert."></p>
+    <p><img src="resources/images/phone.png" alt="Image shows a phone icon"></p>
     <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
     <p><a class="link--cta" href="https://e3624b362d274c66bea02edf0583bfb5.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
     <p class="footer--copyright">© Excursion</p>
