--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a class="link--cta" href="https://e3624b362d274c66bea02edf0583bfb5.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
-    <video playsinline autoplay muted loop>
+    <video autoplay muted loop>
         <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
